--- a/online/sklep/templates/dashboard.html
+++ b/online/sklep/templates/dashboard.html
@@ -21,31 +21,31 @@
         <div class="wojewodztwo-item">
             <a href="{% url 'region_view' 'zach' %}">
                 <img src="{% static 'images/zachod.png' %}" alt="zachodnioporskie">
-                <p>zachodnioporskie</p>
+                <p>Zachodnioporskie</p>
             </a>
         </div>
         <div class="wojewodztwo-item">
             <a href="{% url 'region_view' 'pomo' %}">
                 <img src="{% static 'images/pomorskie.jpeg' %}" alt="pomorskie">
-                <p>pomorskie</p>
+                <p>Pomorskie</p>
             </a>
         </div>
         <div class="wojewodztwo-item">
             <a href="{% url 'region_view' 'warm' %}">
                 <img src="{% static 'images/warm.jpeg' %}" alt="warminsko-mazurskie">
-                <p>warminsko-mazurskie</p>
+                <p>Warminsko-Mazurskie</p>
             </a>
         </div>
         <div class="wojewodztwo-item">
             <a href="{% url 'region_view' 'podl' %}">
                 <img src="{% static 'images/podl.jpeg' %}" alt="podlaskie">
-                <p>podlaskie</p>
+                <p>Podlaskie</p>
             </a>
         </div>
         <div class="wojewodztwo-item">
             <a href="{% url 'region_view' 'mazo' %}">
                 <img src="{% static 'images/mazow.jpeg' %}" alt="mazowieckie">
-                <p>mazowieckie</p>
+                <p>Mazowieckie</p>
             </a>
         </div>
         <div class="wojewodztwo-item">
@@ -57,13 +57,13 @@
         <div class="wojewodztwo-item">
             <a href="{% url 'region_view' 'wiel' %}">
                 <img src="{% static 'images/wiel.jpeg' %}" alt="wielkopolskie">
-                <p>wielkopolskie</p>
+                <p>Wielkopolskie</p>
             </a>
         </div>
         <div class="wojewodztwo-item">
             <a href="{% url 'region_view' 'lubu' %}">
                 <img src="{% static 'images/lubus.png' %}" alt="lubuskie">
-                <p>lubuskie</p>
+                <p>Lubuskie</p>
             </a>
         </div>
 
@@ -78,43 +78,43 @@
         <div class="wojewodztwo-item">
             <a href="{% url 'region_view' 'opol' %}">
                 <img src="{% static 'images/opol.jpeg' %}" alt="opolskie">
-                <p>opolskie</p>
+                <p>Opolskie</p>
             </a>
         </div>
         <div class="wojewodztwo-item">
             <a href="{% url 'region_view' 'lodz' %}">
                 <img src="{% static 'images/lodz.jpeg' %}" alt="lodzie">
-                <p>lodzkie</p>
+                <p>Łódzkie</p>
             </a>
         </div>
         <div class="wojewodztwo-item">
             <a href="{% url 'region_view' 'swie' %}">
                 <img src="{% static 'images/swiet.jpeg' %}" alt="swietokrzyskie">
-                <p>swietokrzyskie</p>
+                <p>Świętokrzyskie</p>
             </a>
         </div>
         <div class="wojewodztwo-item">
             <a href="{% url 'region_view' 'lube' %}">
                 <img src="{% static 'images/lubel.jpeg' %}" alt="lubelskie">
-                <p>lubelskie</p>
+                <p>Lubelskie</p>
             </a>
         </div>
         <div class="wojewodztwo-item">
             <a href="{% url 'region_view' 'podk' %}">
                 <img src="{% static 'images/podka.jpeg' %}" alt="podkarpackie">
-                <p>podkarpackie</p>
+                <p>Podkarpackie</p>
             </a>
         </div>
         <div class="wojewodztwo-item">
             <a href="{% url 'region_view' 'malo' %}">
                 <img src="{% static 'images/malop.jpeg' %}" alt="malopolskie">
-                <p>malopolskie</p>
+                <p>Małopolskie</p>
             </a>
         </div>
         <div class="wojewodztwo-item">
             <a href="{% url 'region_view' 'slas' %}">
                 <img src="{% static 'images/slask.jpeg' %}" alt="slaskie">
-                <p>slaskie</p>
+                <p>Śląskie</p>
             </a>
         </div>
        
@@ -126,7 +126,7 @@
         <button class="vote-button" data-city="Pomo">Pomorskie (<span id="votes-pomo">{{ votes.Pomo|default:0 }}</span>)</button>
         <button class="vote-button" data-city="Warm">Warminsko-Mazurskie (<span id="votes-warm">{{ votes.Warm|default:0 }}</span>)</button>
         <button class="vote-button" data-city="Podl">Podlaskie (<span id="votes-podl">{{ votes.Podl|default:0 }}</span>)</button>
-        <button class="vote-button" data-city="Mazo">Mazowieckie (<span id="votes-mazo">{{ votes.Mazo|default:0 }}</span>)</button>
+        <button class="vote-button" data-city="Mazo">Mazowieckie (<span id="votes-mazo">{{ votes.Maz|default:0 }}</span>)</button>
         <button class="vote-button" data-city="Kuja">Kujawsko-Pomorskie (<span id="votes-kuja">{{ votes.Kuja|default:0 }}</span>)</button>
         <button class="vote-button" data-city="Wiel">Wielkopolskie (<span id="votes-wiel">{{ votes.Wiel|default:0 }}</span>)</button>
         <button class="vote-button" data-city="Lubu">Lubuskie (<span id="votes-lubu">{{ votes.Lubu|default:0 }}</span>)</button>
