--- a/online/sklep/templates/dashboard.html
+++ b/online/sklep/templates/dashboard.html
@@ -126,7 +126,7 @@
         <button class="vote-button" data-city="Pomo">Pomorskie (<span id="votes-pomo">{{ votes.Pomo|default:0 }}</span>)</button>
         <button class="vote-button" data-city="Warm">Warminsko-Mazurskie (<span id="votes-warm">{{ votes.Warm|default:0 }}</span>)</button>
         <button class="vote-button" data-city="Podl">Podlaskie (<span id="votes-podl">{{ votes.Podl|default:0 }}</span>)</button>
-        <button class="vote-button" data-city="Mazo">Mazowieckie (<span id="votes-mazo">{{ votes.Maz|default:0 }}</span>)</button>
+        <button class="vote-button" data-city="Mazo">Mazowieckie (<span id="votes-mazo">{{ votes.Mazo|default:0 }}</span>)</button>
         <button class="vote-button" data-city="Kuja">Kujawsko-Pomorskie (<span id="votes-kuja">{{ votes.Kuja|default:0 }}</span>)</button>
         <button class="vote-button" data-city="Wiel">Wielkopolskie (<span id="votes-wiel">{{ votes.Wiel|default:0 }}</span>)</button>
         <button class="vote-button" data-city="Lubu">Lubuskie (<span id="votes-lubu">{{ votes.Lubu|default:0 }}</span>)</button>
