--- a/online/sklep/templates/wojw/region_lubu.html
+++ b/online/sklep/templates/wojw/region_lubu.html
@@ -1,6 +1,24 @@
-{% extends 'base_generic.html' %}
-
 {% block content %}
-<h1>Kujawsko-Pomorskie</h1>
-<p>Informacje o województwie kujawsko-pomorskim.</p>
+<link rel="stylesheet" href="../../static/css/wojw.css">
+
+<body>
+<header>
+    <div class="user-info">
+        {% if user.is_authenticated %}
+            <span>Welcome, {{ user.username }}!</span>
+            <form method="post" action="{% url 'logout' %}">
+                {% csrf_token %}
+                <button type="submit">Logout</button>
+            </form>
+        {% endif %}
+    </div>
+</header>
+<article>
+    <h1>Lubuskie</h1>
+    <p>Informacje zostaną dodane niedługo w przyszłej aktualizacji</p>
+   
+   
+</article>
+
+</body>
 {% endblock %}
