teraz dodaje ostatecczna wersje do online strony

--- a/online/sklep/templates/base_generic.html
+++ b/online/sklep/templates/base_generic.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>{% block title %}My Site{% endblock %}</title>
+    <title>{% block title %}Przewodnik PL{% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
 </head>
 <body>
