--- a/online/sklep/templates/home.html
+++ b/online/sklep/templates/home.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <header>
-    <h1>Witamy w przewodniku po Polsce</h1>
+    <h1>Witamy w przewodniku po polsce</h1>
 </header>
 <main>
     <div class="home-images">
