lekka zmiana bo byl blad maly

--- a/online/sklep/templates/wojw/region_slas.html
+++ b/online/sklep/templates/wojw/region_slas.html
@@ -73,13 +73,13 @@
             <div class="city">
                 <p>Zabrze</p>
                 Zabrze – miasto w Polsce na prawach powiatu położone w województwie śląskim, na Wyżynie Śląskiej, nad rzekami Kłodnicą i Bytomką.
-                <img src="../../static/images/miasta/zabr.jpeg.jpeg" alt="Wałbrzych">
+                <img src="../../static/images/miasta/zabr.jpeg" alt="Zabrze">
                
             </div>
             <div class="city">
                 <p>Kopalnia Guido</p>
                 Zabytkowa kopalnia węgla kamiennego, gdzie można zjechać 320 metrów pod ziemię. Zwiedzanie obejmuje przejażdżkę górniczą kolejką i pokaz pracy maszyn wydobywczych.
-                <br><br> <img src="../../static/images/miejsca/kopa.jpeg.jpeg" alt="City 2">
+                <br><br> <img src="../../static/images/miejsca/kopa.jpeg" alt="City 2">
                
             </div>
             <div class="city">
