lekkie poprawy w opisach ale juz idelanie jest

--- a/online/sklep/templates/o_nas.html
+++ b/online/sklep/templates/o_nas.html
@@ -21,7 +21,7 @@
             </div>
         </div>
         <div class="accordion-item">
-            <h3 class="accordion-title">Dlaczego warto odwiedzać akurat Polskie miasta ? ( z perspektywy Polaka )</h3>
+            <h3 class="accordion-title">Dlaczego warto odwiedzać akurat polskie miasta ? ( z perspektywy Polaka )</h3>
             <div class="accordion-content">
                 <p><h4>Z perspektywy Polaka</h4>
                     Polskie miasta to prawdziwe perełki, które warto odwiedzać zarówno ze względu na ich bogatą historię, jak i dynamiczny rozwój. Każde z nich ma swój unikalny charakter – od królewskiego Krakowa, przez tętniącą życiem Warszawę, aż po pełen tajemniczych zaułków Gdańsk. Polska to kraj pełen kontrastów, gdzie gotyckie katedry stoją obok nowoczesnych biurowców, a tradycyjna kuchnia przeplata się z nowoczesnymi trendami kulinarnymi. Dodatkowo, podróżowanie po Polsce jest stosunkowo tanie w porównaniu do Europy Zachodniej, co sprawia, że możemy odkrywać swoje dziedzictwo bez nadwyrężania budżetu.
