--- a/sklep/sklep/templates/wojw/region_wiel.html
+++ b/sklep/sklep/templates/wojw/region_wiel.html
@@ -72,7 +72,7 @@
         <div class="block">
             <div class="city">
                 <p>Gniezno</p>
-                Świnoujście (niem. Swinemünde[4]) – miasto na prawach powiatu, uzdrowisko w północno-zachodnim krańcu Polski, najdalej wysunięte na północny zachód miasto w kraju, w województwie zachodniopomorskim z portem morskim i kąpieliskiem, położone nad cieśniną Świną oraz nad Morzem Bałtyckim, 
+                Gniezno (łac. Gnesna, niem. Gnesen) – miasto w województwie wielkopolskim, pierwsza stolica Polski[5][6], pierwsza metropolia kościelna w Polsce, miasto św. Wojciecha. Siedziba władz powiatu gnieźnieńskiego i gminy Gniezno oraz archidiecezji (arcybiskupów gnieźnieńskich i prymasów Polski).
                 <img src="../../static/images/miasta/gnie.jpeg" alt="Gniezno">
                
             </div>
